# Generalized-VDEP

./: .gitignore  LICENSE  README.md  analysis.py  calc_f1scores.py  calc_statistics.py  convert_rawdata.py  main_evaluate.py  main_verify.py  preparation.py  pyproject.toml  requirements.txt  run.sh  set_variables.py  train_GVDEP_opendata.py  train_models.py  verify_models.py  visualize_sample.py
matplotsoccer/: __init__.py  fns.py
socceraction/: actiontypes.xlsx  xthreat.py
socceraction/atomic/: spadl.py
socceraction/atomic/vaep/: features.py  formula.py  labels.py
socceraction/data/: __init__.py
socceraction/data/opta/: __init__.py  loader.py  schema.py
socceraction/data/rdd/: __init__.py  loader.py  schema.py
socceraction/data/statsbomb/: __init__.py  loader.py  schema.py
socceraction/data/wyscout/: __init__.py  loader.py  schema.py
socceraction/spadl/: __init__.py  base.py  config.py  opta.py  schema.py  statsbomb.py  statsbomb_360.py  utils.py  wyscout.py
socceraction/vdep/: features.py  formula.py  labels.py
