[tool.poetry]
name = "generalized-vdep"
version = "0.1.0"
description = ""
authors = ["Rikuhei-ynwa <umemoto.rikuhei@g.sp.m.is.nagoya-u.ac.jp>"]
package-mode = true
readme = "README.md"

[tool.poetry.dependencies]
python = "3.7.16"
matplotlib = "3.5.1"
requests = "^2.31.0"
mplsoccer = "1.1.10"
numpy = "1.21.5"
scipy = "1.7.3"
scikit-learn = "1.0.2"
pandas = "1.3.5"
pandera = "0.8.1"
adjustText = "0.7.3"
xgboost = "1.5.2"
shap = "0.41.0"
tables = "3.7.0"
catboost = "1.0.4"
pickle5 = "0.0.12"

[tool.poetry.group.dev.dependencies]
black = "22.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
